@@ -67,12 +67,12 @@ if [ "$1" = "jmx" ]; then
 fi
 
 JAVA_MEM_OPTS=""
-#BITS=`java -version 2>&1 | grep -i 64-bit`
-#if [ -n "$BITS" ]; then
-#    JAVA_MEM_OPTS=" -server -Xmx512m -Xms512m -Xmn256m -XX:PermSize=128m -Xss256k -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:LargePageSizeInBytes=128m -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 "
-#else
-#    JAVA_MEM_OPTS=" -server -Xms512m -Xmx512m -XX:PermSize=128m -XX:SurvivorRatio=2 -XX:+UseParallelGC "
-#fi
+BITS=`java -version 2>&1 | grep -i 64-bit`
+if [ -n "$BITS" ]; then
+    JAVA_MEM_OPTS=" -server -Xmx18g -Xms4g -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:LargePageSizeInBytes=128m -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 "
+else
+    JAVA_MEM_OPTS=" -server -Xmx18g -Xms4g -XX:SurvivorRatio=2 -XX:+UseParallelGC "
+fi
 
 LOG_IMPL_FILE=log4j2.xml
 LOGGING_CONFIG=""
